fix: Button color in dark mode

--- a/src/app.css
+++ b/src/app.css
@@ -428,7 +428,8 @@ body:focus-visible {
 .dark h2,
 .dark h3,
 .dark p,
-.dark #burger-button svg {
+.dark #burger-button svg,
+.dark button {
     color: #f5f5f4;
 }
 
